<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_Color"
    android:orientation="vertical"
    android:id="@+id/fragment_dialog_barmen">

    <TextView
        android:id="@+id/text_view_dungeon"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="asdajksbdanbdsadwad"
        android:textColor="@color/whiteColor"
        android:textSize="25sp">
    </TextView>

    <Button
        android:id="@+id/button_dialog_dungeon_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_view_dungeon"
        android:background="@color/black_Color"
        android:textColor="@color/whiteColor"
        android:text="@string/talk_barmen_v_1"/>
    <Button
        android:id="@+id/button_dialog_dungeon_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_dialog_dungeon_1"
        android:background="@color/black_Color"
        android:textColor="@color/whiteColor"
        android:text="@string/talk_barmen_v_2"/>
    <Button
        android:id="@+id/button_dialog_dungeon_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_dialog_dungeon_2"
        android:background="@color/black_Color"
        android:textColor="@color/whiteColor"
        android:text="@string/talk_barmen_v_3"/>
    <Button
        android:id="@+id/button_dialog_dungeon_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_dialog_dungeon_3"
        android:background="@color/black_Color"
        android:textColor="@color/whiteColor"
        android:text="Статус"/>


</androidx.constraintlayout.widget.ConstraintLayout>